2001-12-04  Havoc Pennington  <hp@redhat.com>

        Backport from HEAD
	
	* gconf/gconf-internals.c (open_empty_locked_file): improve error

	* gconf/gconftool.c (main): complain about using --config-source
	but not --direct

	* backends/xml-backend.c (resolve_address): don't try to lock 
	readonly sources; fixes the case where users install to a prefix 
	that they can write to, was causing problems for people using
	build scripts.

	* gconf/gconfd.c (gconf_set_exception): add missing value to case
	statement so we don't crash

	* gconf/gconftool.c (process_schema_list): make sure we have an
	element instead of a text node before we try to process it; kills
	a bunch of irritating warnings.

2001-10-31  Zbigniew Chyla  <cyba@gnome.pl>

	* gconf/gconf-internals.c (gconf_activate_server): Plug leak.

2001-10-30  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* backends/val-encode.c: add missing headers to remove
	some warnings.

2001-10-29  Havoc Pennington  <hp@redhat.com>

	* configure.in: bump version to 1.0.7

2001-10-29  Havoc Pennington  <hp@redhat.com>

        Un-fubar this.
	
	* gconf/gconf-internals.c (g_utf8_skip, g_utf8_validate):
	rename, don't just make them static. g_utf8_validate is used 
	in other files. The idiocy continues.

2001-10-29  Havoc Pennington  <hp@redhat.com>

	* gconf/gconf-internals.c (g_utf8_validate): make this function
	static, I'm a dumbass, hopefully fixes a problem people were
	seeing with GAL
	(g_utf8_skip): this is static too

2001-10-17  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Try to detect and use DB 3.3 and 3.2 if found.

2001-10-16  Havoc Pennington  <hp@redhat.com>

	* configure.in: 1.0.6

2001-10-15  Havoc Pennington  <hp@redhat.com>

	* gconf/gconftool.c (main): don't create config daemon for
	--get-default-source
	(main): shut down daemon in makefile install mode

	* gconf/gconfd.c (main): get dup2 arguments in the right order,
	fixes all kinds of weirdness.

2001-10-14  Havoc Pennington  <hp@redhat.com>
